Setting version to 0.1.5 for release.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fgoxide"
-version = "0.1.5-alpha.0"
+version = "0.1.5"
 edition = "2021"
 authors = [
     "Tim Fennell <tim@fulcrumgenomics.com",
