--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fgoxide"
-version = "0.4.0"
+version = "0.4.1-rc.1"
 edition = "2021"
 authors = [
     "Tim Fennell <tim@fulcrumgenomics.com",
