--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "fgoxide"
 version = "0.4.1-rc.1"
 edition = "2021"
 authors = [
-    "Tim Fennell <tim@fulcrumgenomics.com",
-    "Seth Stadick <seth@fulcrumgenomics.com>"
+    "Tim Fennell <tim@fulcrumgenomics.com>",
+    "Nils Homer <nils@fulcrumgenomics.com>"
 ]
 license = "MIT"
 repository = "https://github.com/fulcrumgenomics/fgoxide"
@@ -22,7 +22,7 @@ thiserror = "^1"
 flate2 = "^1"
 
 # For auto-serialization of structs to csv/tsv
-csv = "^1"
+csv = "^1, <1.2"
 serde = { version = "^1.0.123", features = ["derive"] }
 serde-aux = "^4"
 
